Fixed copied message spacing. Created an avalibale for projects indicator

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,12 +31,68 @@ body {
   padding: 20px;
 }
 
+.available-for-projects {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 13px;
+  border-radius: 100px;
+  border: 1px solid #3f3f48;
+  padding: 6px 12px 6px 12px;
+}
+
+.available-for-projects-description {
+  color: var(--primary-grey);
+  font-size: 0.875rem;
+  font-family: var(--Inter);
+  font-weight: 400;
+  letter-spacing: 0.023rem;
+  line-height: 1.6em;
+}
+
+.ping-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.heartbeat {
+  position: absolute;
+  width: fit-content;
+  background-color: rgb(169 139 250 / 1);
+  border-radius: 40px;
+  width: 18px;
+  height: 18px;
+  opacity: 0.75;
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+.dot {
+  position: relative;
+  width: fit-content;
+  background-color: #cab7ff;
+  filter: drop-shadow(0px 0px 8px #a98bfa);
+  border-radius: 40px;
+  width: 12px;
+  height: 12px;
+}
+
+@keyframes ping {
+  75%,
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
 .hero-title {
   color: var(--purple);
   font-size: 4.5rem;
   font-family: var(--Inter);
   font-weight: 650;
   max-width: 600px;
+  margin-top: 1.5rem;
 }
 
 .hero-description {
@@ -47,7 +103,7 @@ body {
   letter-spacing: 0.023rem;
   line-height: 1.6em;
   max-width: 600px;
-  margin-top: 30px;
+  margin-top: 1.25rem;
 }
 
 .featured-projects-section,
@@ -264,8 +320,8 @@ body {
   font-weight: 400;
   width: 600px;
   position: fixed;
-  margin-top: 150px;
-  margin-left: 400px;
+  margin-top: 100px;
+  margin-left: 190px;
   animation: fadeOut 3s;
 }
 
